# totally-not-image-viewer

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/formats/: img.h  pbm.h
